--- a/ansible/roles/feedbacksite/tasks/main.yml
+++ b/ansible/roles/feedbacksite/tasks/main.yml
@@ -2,33 +2,44 @@
 - name: Create feedback group
   group:
     name: "{{ feedbacksite_user }}"
+  tags: [sites,sites-feedback]
 - name: Create feedback user
   user:
     name: "{{ feedbacksite_user }}"
     comment: "Feedback site user"
     group: "{{ feedbacksite_user }}"
     home: "{{ feedbacksite_root }}"
+  tags: [sites,sites-feedback]
 - name: Create feedback site doc root
   file:
     path: "{{ feedbacksite_root }}/www"
     state: directory
+  tags: [sites,sites-feedback]
 - name: Create feedback site ssl
   file:
     path: "{{ feedbacksite_root }}/ssl"
     state: directory 
+  tags: [sites,sites-feedback]
 - name: Create feedback site
   template:
     src: site.conf
     dest: "{{ webserver_sites_available }}/feedback"
   notify: restart-webserver
+  tags: [sites,sites-feedback]
 - name: Create feedback symlink
   file:
     src: "{{ webserver_sites_available }}/feedback"
     dest: "{{ webserver_sites_enabled }}/feedback"
     state: link
   notify: restart-webserver
+  tags: [sites,sites-feedback]
 - name: Create php config
   template:
     src: php.conf
     dest: "{{ phpfpm_path }}/{{ feedbacksite_user }}.conf"
   notify: restart-php
+  tags: [sites,sites-feedback]
+- name: create self-signed SSL cert
+  command: openssl req -new -nodes -x509 -subj "/C=GB/ST=London/L=London/O=DMDirc/CN=feedback.dmdirc.com" -days 3650 -keyout {{ feedbacksite_root}}/ssl/ssl.key -out {{ feedbacksite_root}}/ssl/ssl.pem -extensions v3_ca creates={{ feedbacksite_root}}/ssl/ssl.pem
+  notify: restart-webserver
+  tags: [sites,sites-feedback]
