--- a/ansible/roles/feedbacksite/tasks/main.yml
+++ b/ansible/roles/feedbacksite/tasks/main.yml
@@ -45,3 +45,10 @@
   command: openssl req -new -nodes -x509 -subj "/C=GB/ST=London/L=London/O=DMDirc/CN=feedback.dmdirc.com" -days 3650 -keyout {{ feedbacksite_root}}/ssl/ssl.key -out {{ feedbacksite_root}}/ssl/ssl.pem -extensions v3_ca creates={{ feedbacksite_root}}/ssl/ssl.pem
   notify: restart-webserver
   tags: [sites,sites-feedback]
+- name: Copy feedback site
+  template:
+    src: feedback.php
+    dest: "{{ feedbacksite_root }}/www/index.php"
+    group: "{{ feedbacksite_user }}"
+    owner: "{{ feedbacksite_user }}"
+  tags: [sites,sites-feedback]
