--- a/ansible/roles/feedbacksite/templates/site.conf
+++ b/ansible/roles/feedbacksite/templates/site.conf
@@ -5,7 +5,7 @@ server {
 	root                            {{ feedbacksite_root }}/www;
 	index                           index.php;
         location ~ \.php {
-                root                            /www;
+#                root                            /www;
                 fastcgi_split_path_info         ^(.+\.php)(/.+)$;
                 fastcgi_param                   PATH_INFO                       $fastcgi_path_info;
                 fastcgi_param                   PATH_TRANSLATED                 $document_root$fastcgi_path_info;
@@ -48,7 +48,7 @@ server {
         ssl_session_cache		shared:SSL:50m;
 
 	location ~ \.php {
-		root				/www;
+#		root				/www;
 	 	fastcgi_split_path_info		^(.+\.php)(/.+)$;
 		fastcgi_param			PATH_INFO			$fastcgi_path_info;
 		fastcgi_param			PATH_TRANSLATED			$document_root$fastcgi_path_info;
