Give feedback site its own log file.
Issue #33

--- a/ansible/roles/feedbacksite/templates/site.conf
+++ b/ansible/roles/feedbacksite/templates/site.conf
@@ -4,6 +4,8 @@ server {
 	server_name			feedback.dmdirc.com;
 	root                            {{ feedbacksite_root }}/www;
 	index                           index.php;
+	error_log			{{ feedbacksite_root }}/logs/error.log;
+	access_log			{{ feedbacksite_root }}/logs/access.log;
         location ~ \.php {
 #                root                            /www;
                 fastcgi_split_path_info         ^(.+\.php)(/.+)$;
