--- a/ansible/roles/feedbacksite/tasks/main.yml
+++ b/ansible/roles/feedbacksite/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Create log directory
+  file:
+    path: "{{ feedbacksite_root }}/logs"
+    state: directory
+    group: "{{ feedbacksite_user }}"
+    owner: "{{ feedbacksite_user }}"
+  tags: [sites,sites-feedback]
 - name: Create feedback group
   group:
     name: "{{ feedbacksite_user }}"
