Restart when creating log.

--- a/ansible/roles/feedbacksite/tasks/main.yml
+++ b/ansible/roles/feedbacksite/tasks/main.yml
@@ -5,6 +5,7 @@
     state: directory
     group: "{{ feedbacksite_user }}"
     owner: "{{ feedbacksite_user }}"
+  notify: restart-webserver
   tags: [sites,sites-feedback]
 - name: Create feedback group
   group:
