--- a/ansible/common.yml
+++ b/ansible/common.yml
@@ -7,4 +7,4 @@
       # Note: these are resolved relative to the role's files dir.
       ssh_root_key_glob: ../../../data/keys/active/*
       ssh_revoked_root_key_glob: ../../../data/keys/revoked/*
-
+    - role: shane-user
