Add DMDirc roles, remove others.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,4 @@
-[submodule "ansible/chris-roles"]
-	path = ansible/chris-roles
-	url = https://github.com/csmith/ansible-roles.git
-	branch = master
-[submodule "ansible/greg-roles"]
-	path = ansible/greg-roles
-	url = https://github.com/greboid/ansible-roles.git
+[submodule "ansible/dmdirc-roles"]
+	path = ansible/dmdirc-roles
+	url = https://github.com/DMDirc/ansible-roles.git
 	branch = master
