--- a/ansible/roles/shane-user/meta/main.yml
+++ b/ansible/roles/shane-user/meta/main.yml
@@ -1,3 +1,3 @@
 ---
 dependencies:
-  - { role: sudoer, user: shane, need_password: No }
+  - { role: sudo-user, sudoer_user: shane, sudoer_need_password: No }
