--- a/ansible/roles/feedbacksite/templates/site.conf
+++ b/ansible/roles/feedbacksite/templates/site.conf
@@ -6,7 +6,7 @@ server {
 	index                           index.php;
 	error_log			{{ feedbacksite_root }}/logs/error.log;
 	access_log			{{ feedbacksite_root }}/logs/access.log;
-	include				php.conf;
+	include				{{ feedbacksite_root }}/conf/php.conf;
 }
 server {
 	listen				443;
@@ -24,5 +24,5 @@ server {
         ssl_protocols			TLSv1 TLSv1.1 TLSv1.2;
         ssl_prefer_server_ciphers	on;
         ssl_session_cache		shared:SSL:50m;
-	include				php.conf;
+	include				{{ feedbacksite_root }}/conf/php.conf;
 }
