--- a/ansible/vars/sentry.yml
+++ b/ansible/vars/sentry.yml
@@ -1,6 +1,6 @@
 ---
 
-sentry_url: http://do2.chameth.com:7027/
+sentry_url: https://sentry.dmdirc.com/
 sentry_port: 7027
 
 sentry_email_address: sentry-noreply@dmdirc.com
@@ -9,3 +9,4 @@ sentry_superuser_email: devs-public@dmdirc.com
 sentry_team_name: DMDirc
 sentry_project_name: DMDirc
 sentry_project_platform: java
+
