Use new generic site role

--- a/ansible/roles/feedbacksite/defaults/main.yml
+++ b/ansible/roles/feedbacksite/defaults/main.yml
@@ -1,6 +1,3 @@
 ---
-phpfpm_path: /etc/php5/fpm/pool.d
-webserver_sites_available: /etc/nginx/sites-available
-webserver_sites_enabled: /etc/nginx/sites-enabled
-feedbacksite_root: /home/sites-feedback
 feedbacksite_user: sites-feedback
+feedbacksite_root: "/home/{{ feedbacksite_user }}"
