--- a/ansible/sentry.yml
+++ b/ansible/sentry.yml
@@ -8,4 +8,4 @@
     - role: nginx-upstream-site
       nginx_upstream_site_hostname: "{{ sentry_hostname }}"
       nginx_upstream_site_user: sites-sentry
-      nginx_upstream_site_upstream: "http://{{ sentry_hostname }}:{{ sentry_port }}"
+      nginx_upstream_site_upstream: "http://127.0.0.1:{{ sentry_port }}"
