--- a/ansible/binaries.yml
+++ b/ansible/binaries.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: binaries
   roles:
-    - role: nginx-site
+    - role: nginx-php-site
       nginx_php_site_hostname: binary.dmdirc.com
       nginx_php_site_user: sites-binaries
