Checkout update site.

--- a/ansible/roles/updatessite/meta/main.yml
+++ b/ansible/roles/updatessite/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 dependencies:
   - role: nginx-php-site
+    nginx_php_site_root_www: "/home/{{ updatessite_root }}/www/www"
     nginx_php_site_hostname: "{{ updatessite_hostname }}"
     nginx_php_site_user: "{{ updatessite_user }}"
