Use new generic fallback.

--- a/ansible/roles/redirects/vars/main.yml
+++ b/ansible/roles/redirects/vars/main.yml
@@ -2,3 +2,4 @@
 hosts:
   redirect.dmdirc.com:
     - { location: "/java/windows/", redirect: "javadl.sun.com/webapps/download/AutoDL?BundleId=98426" }
+redirects_fallback: https://www.dmdirc.com
