--- a/ansible/all.yml
+++ b/ansible/all.yml
@@ -4,6 +4,7 @@
 - include: nexus.yml
 - include: nightlies.yml
 - include: reports.yml
+- include: redirects.yml
 - include: sentry.yml
 - include: updater.yml
 - include: binaries.yml
