--- a/ansible/roles/redirects/vars/main.yml
+++ b/ansible/roles/redirects/vars/main.yml
@@ -211,6 +211,10 @@ hosts:
         redirect: https://github.com/DMDirc/$1
     fallback: https://github.com/DMDirc
 
+  teamcity.dmdirc.com:
+    rules: []
+    fallback: https://github.com/csmith/Meta#contributing-and-continuous-integration
+
   wiki.dmdirc.com:
     rules:
       - location: /documentation:actions:actions
