Trim old nightlies to specified number of nightlies.
Fixes #81

--- a/ansible/roles/nightliessite/defaults/main.yml
+++ b/ansible/roles/nightliessite/defaults/main.yml
@@ -2,3 +2,4 @@
 nightliessite_user: sites-nightlies
 nightliessite_hostname: nightlies.dmdirc.com
 nightliessite_root: "/home/{{ nightliessite_user }}"
+nightliessite_max_nightlies: 7
