--- a/ansible/nightlies.yml
+++ b/ansible/nightlies.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: nightlies
   vars_files:
-    - vars/circle-private.yml
+    - vars/private/circle-private.yml
   roles:
    - nightliessite
