--- a/circle.yml
+++ b/circle.yml
@@ -23,5 +23,4 @@ dependencies:
 
 test:
   override:
-    - docker run -v $PWD/ansible:/opt/ansible -v $PWD/ansible/vars/testing:/opt/ansible/vars/private -t dmdirc/ansibletest
-
+    - docker run -v $PWD/ansible:/opt/ansible -v $PWD/ansible/vars/testing:/opt/ansible/vars/private -t dmdirc/ansibletest /opt/ansible/tests/runtests
