--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = ansible/thirdparty-roles/nexus
 	url = https://github.com/greboid/ansible-sonatype_nexus.git
 	branch = master
+[submodule "docker"]
+	path = docker
+	url = https://github.com/DMDirc/ansibletest.git
