--- a/ansible/roles/reportssite/meta/main.yml
+++ b/ansible/roles/reportssite/meta/main.yml
@@ -3,3 +3,4 @@ dependencies:
   - role: nginx-php-site
     nginx_php_site_hostname: "{{ reportssite_hostname }}"
     nginx_php_site_user: "{{ reportssite_user }}"
+    nginx_site_autoindex: "on"
